--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,11 @@
       "url":  "https://github.com/dakarn/es-framework-kernel"
     }
   ],
+  "autoload": {
+    "psr-4": {
+      "App\\": "app"
+    }
+  },
   "require": {
     "php": "7.*",
     "es-framework-kernel": "dev-master"
